# ChangeLog for dev-perl/Devel-Cycle
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Cycle/ChangeLog,v 1.19 2009/05/02 11:26:08 tove Exp $

  02 May 2009; Torsten Veller <tove@gentoo.org> -Devel-Cycle-1.04.ebuild:
  Cleanup

*Devel-Cycle-1.10 (07 Sep 2008)

  07 Sep 2008; Torsten Veller <tove@gentoo.org> +Devel-Cycle-1.10.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Devel-Cycle-1.07.ebuild:
  Stable on x86, bug #169152.

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  Devel-Cycle-1.07.ebuild:
  Stable on ia64.

  09 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -Devel-Cycle-1.02.ebuild, Devel-Cycle-1.04.ebuild,
  Devel-Cycle-1.07.ebuild:
  Cleaning up stale ebuilds

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Devel-Cycle-1.07.ebuild:
  ppc stable

  07 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Devel-Cycle-1.07.ebuild:
  Marking stable amd64, sparc

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Devel-Cycle-1.02.ebuild, Devel-Cycle-1.04.ebuild, Devel-Cycle-1.07.ebuild:
  Adding perl dep; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Devel-Cycle-1.04.ebuild:
  Mark 1.04 stable on ia64

  24 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  -Devel-Cycle-1.05.ebuild:
  Cleaning up - 1.05 had problems in the weak ref support

*Devel-Cycle-1.07 (23 Jun 2006)

  23 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  +Devel-Cycle-1.07.ebuild:
  Version bump upstream

  08 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Devel-Cycle-1.04.ebuild:
  ppc stable

*Devel-Cycle-1.05 (22 May 2006)

  22 May 2006; <mcummings@gentoo.org> +Devel-Cycle-1.05.ebuild:
  Version bump

  05 Apr 2006; <mcumming@gentoo.org> Devel-Cycle-1.04.ebuild:
  Marking ~amd64, tested on pitr

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Devel-Cycle-1.04.ebuild:
  Mark 1.04 ~ia64
