@@ -1,0 +1,17 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Cycle/Devel-Cycle-1.11.ebuild,v 1.1 2009/08/25 17:21:30 robbat2 Exp $
+
+MODULE_AUTHOR=LDS
+inherit perl-module
+
+DESCRIPTION="Find memory cycles in objects"
+
+LICENSE="|| ( Artistic GPL-2 )"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~x86-macos"
+IUSE=""
+
+SRC_TEST="do"
+
+DEPEND="dev-lang/perl"
