@@ -1,6 +1,8 @@
 DIST Devel-Cycle-1.07.tar.gz 6019 RMD160 47efcea156166e5944e2b718a22512784a5ea215 SHA1 bd34160281d9d6dc3e6052e07aa6e9b81d169e0d SHA256 6a94f4bd54491e9fe51fdbd052cf563f6ef377f97004c8de769eeb8b714d764c
 DIST Devel-Cycle-1.10.tar.gz 6792 RMD160 edec933a91d3e0fce1982f7db11900aa53962740 SHA1 6fb881d10d62b52e16296338ba7aa5d0944ed6d6 SHA256 32fab249b459de4ff06a68efd4e4685610aef6b649789800ce34ba3a9bcee686
+DIST Devel-Cycle-1.11.tar.gz 6843 RMD160 ccffb21fcb4c3f80ed4d46b07af4e1b294828931 SHA1 c88be23f7d5205e67745a4c6c3cdd2fc39595ea8 SHA256 3a9325a04d0649643cc1c37909a347698d0a3c11f8780475de5d8c9cba1f879d
 EBUILD Devel-Cycle-1.07.ebuild 518 RMD160 790e6f70446159995b3dc4f7ecc3070ca2bd73ba SHA1 04cb3e29a45d19ea900051763c2f84cef19b8ef6 SHA256 b1d4dea8719768da38b8a8090897c89a23a612a772f117c6df230946e1c76527
 EBUILD Devel-Cycle-1.10.ebuild 443 RMD160 ccfb4df49c9a9cd22e0f2b72837bca59243fdf78 SHA1 6029950bfd78b6fddbe60f13d042fa1ce982d65a SHA256 b5a6b0316601a42e7b6c988bb74c995c27a97664a72b5bf74d0d0b32e784da41
-MISC ChangeLog 2447 RMD160 d2832c2074e203ab6b95ec8b2417e34ba5e17288 SHA1 7be21e10053afe83023504be1899fa8f66f1c329 SHA256 d885351606f968dbd70eaf8c4b76c7f97d0d609fc23d4eb7f3a58058ba944275
+EBUILD Devel-Cycle-1.11.ebuild 446 RMD160 3e33f5b8a1e261efb4af955829908679169205fb SHA1 5b3b974c281f83f2a08e128e6711f9eefbe2d00c SHA256 6292718ea2bf10c7b98f1350bb69f1bd8d93e11e3c72826ac4a5a151181fdfda
+MISC ChangeLog 2613 RMD160 074df9cd66122769e7727f76557ee9a74891b5c4 SHA1 6ab22d298f3a62572a3d9fe34abbae894eddc55e SHA256 9f3229e4b65ac475a40d9351d6f0fac38be9cab63cc641ee9d92833053a45d89
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
