@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Devel-Cycle
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Cycle/ChangeLog,v 1.19 2009/05/02 11:26:08 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Cycle/ChangeLog,v 1.20 2009/08/25 17:21:30 robbat2 Exp $
+
+*Devel-Cycle-1.11 (25 Aug 2009)
+
+  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +Devel-Cycle-1.11.ebuild:
+  Version bump via perl-bump experimental tool.
 
   02 May 2009; Torsten Veller <tove@gentoo.org> -Devel-Cycle-1.04.ebuild:
   Cleanup
